--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   flutter_staggered_grid_view: ^0.6.2
   flutter_svg: ^1.1.5
+  google_nav_bar: ^5.0.6
   image_picker: ^0.8.5+3
   intl: ^0.17.0
   provider: ^6.0.3
