--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   firebase_storage: ^10.3.10
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.2.9
+  
   flutter_staggered_grid_view: ^0.6.2
   flutter_svg: ^1.1.5
   google_nav_bar: ^5.0.6
@@ -48,6 +50,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_native_splash: 
+  image: assets/splash.png
+  color: '#ffffff' 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
